# file-manager-in-django

./: DOCKERFILE  README.md  docker-compose.yaml  makefile  pyproject.toml  utils.py
dashboard/: admin.py  forms.py  functionalities.py  models.py  urls.py  views.py
dashboard/migrations/: 0001_initial.py  0002_alter_folder_user_alter_master_folder_user.py  0002_delete_master_folder.py  0002_rename_file_name_file_file_name_and_more.py  0003_folder_folder_id_alter_master_folder_folder_id.py  0004_alter_folder_folder_id.py  0005_alter_folder_folder_id_alter_master_folder_folder_id.py  0006_alter_folder_user_alter_master_folder_user.py  0007_alter_master_folder_user.py  0008_alter_folder_user.py  0009_alter_folder_user_alter_folder_parent_folder.py
file_manager/: asgi.py  settings.py  urls.py  views.py
media/uploads/: token.txt
static/css/: style.css
static/css/dashboard/: style.css
static/css/landingPage/: style.css
static/css/login/: login.css
static/css/logo/: logo.css
templates/: logo.html
templates/dashboard/: fileManagerFolder.html  fileManagerRoot.html  files.html  folder.html  folders.html  index.html  sideBar.html
templates/landingPage/: filesOnMc.html  header.html  index.html  landingPage.html  landingPageIndex.html  welcome.html
templates/users/: loginPage.html  registerPage.html  userPage.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_rename_user_email_user_profile_email_and_more.py  0002_user_profile_max_storage.py  0003_alter_user_profile_email.py
(+55 files in other folders)
